[tool.poetry]
name = "parkoff"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.2.49"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
