[tool.poetry]
name = "parkoff"
version = "0.1.0"
description = ""
authors = ["tekritesh <ritesh.tekriwal03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.49"
pandas = "^2.2.2"
ipykernel = "^6.29.5"
requests = "^2.32.3"
certifi = "^2025.1.31"
psutil = "^7.0.0"
pytest = "^8.3.5"
schedule = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
